--- a/docs/2.4_python-patterns.md
+++ b/docs/2.4_python-patterns.md
@@ -1,37 +1,35 @@
+# Python 中的编程模式
 
-# Programming Patterns in Python
+现在我们已经了解了计算机如何组织数据，并进行一些低级编程操作，现在让我们看一些常见的高级编程模式。 每一个这些操作都有一个使用条件和循环模式的实现，我们可以使用 python 语法很容易地表达。我们也可以使用现有的库函数来实现相同的功能，我们也将探索它们。
 
-Now that we have an understanding of how computers organize data and have some low level programming operations, let's look at a few common high-level programming patterns. Each of these operations has an implementation using conditional and loop patterns, which we can very easily express using python syntax. We can also use existing library functions to achieve the same thing, which we'll explore also.
+当我们进行时，你会发现程序设计和编程是一个单词关联的游戏。 高级操作（例如`map`）应该在您的脑海中触发伪代码（类似英语的“代码”）的循环模板，然后应该触发`for-each` Python 代码模板。
 
-As we go through, you will see that program design and coding are a game of word association. A high-level operation, such as map, should trigger a pseudocode (English-like "code") loop template in your mind, which should then trigger a for-each Python code template.
+*请记住*，我们通过选择和应用操作来设计程序，而不是特定的代码序列。编程是设计过程中的最后一步，我们在这里获得可执行文档。因此，直观地思考如何操作数据列表，或从数据中提取信息。我经常把事情画出来或者把它们放到电子表格中，来帮助我想象。在纸上手动移动一些数据有助于我理解要执行的操作。
 
-*Keep in mind that we design programs by selecting and applying operations, not specific code sequences. Coding is the final act in the design process where we get an executable document.* So, think visually about how you would manipulate lists of data or extract information from data. I often draw things out or put them into a spreadsheet to help me visualize. Manually moving some data around on paper helps me to understand the operations to perform. 
+在设计了高级操作的序列或组合之后，我们可以用伪代码或直接使用 Python 语法来写出东西。随着您获得更多经验，从操作直接转到代码将更容易，但我们仍然在使用操作而不是代码来设计程序。对于复杂的问题，尽管有 35 年以上的编程经验，我仍然写出伪代码。
 
-After designing a sequence or combination of high-level operations, we can write things out in pseudocode or go straight to Python syntax. As you gain more experience, it will be easier to go straight from the operation to the code, but we still design programs using operations, not code, in our head. For complex problems, I still write out pseudocode, despite 35+ years coding experience.
+## 编程模式
 
-## Programming patterns
+选择程序的整体计划时，程序员从一组模式或模板中提取。个别行动本身也是如此。程序员有一个常见操作目录，他们在选择计划步骤时依赖他。
 
-Programmers draw from a set of patterns or templates when choosing an overall program plan. The same is true of the individual operations themselves.  Programmers have a catalog of common operations that they rely on when choosing the steps of a plan.
+毫无疑问，您熟悉以下操作：
 
-You're no doubt familiar with operations such as:
+* *求和列表中的数字*
+* *计数列表中的数字*
 
-* *sum the numbers in a list*
-* *count the numbers in a list*.
+但我们可以将这些进一步抽象为：
 
-But we can abstract those further into:
+* *查找满足条件的列表中的所有值*
+* *对列表中的每个元素应用操作*
+* ......
 
-* *find all values in a list satisfying a condition*
-* *apply an operation to each element in the list*. 
-* ...
+操作越抽象，它就越广泛适用。我们使用的操作类型部分取决于程序员的风格，但很大程度上受编程语言的能力及其预先存在的功能库的影响。
 
-The more abstract the operation, the more widely applicable it is.  The kinds of operations we use depends partly on a programmer's style but is heavily influenced by the capabilities of the programming language and its libraries of pre-existing functionality.
+## 数据练习
 
-## Data for exercises
+在我们浏览这些材料时，我们将做几个小练习。 请将此 Python 代码剪切并粘贴到您正在使用的笔记本中。
 
-We will be doing several small exercises as we go through this material. Please cut and paste this Python code into the notebook you are using.
-
-Please try to do the exercises without looking at the solutions, which appear immediately below the exercise description.
-
+请尝试在不查看练习描述正下方的解决方案的情况下进行练习。
 
 ```python
 UnitPrice = [38.94, 208.16, 8.69, 195.99]
@@ -64,14 +62,13 @@ first=['Xue', 'Mary', 'Robert']
 last=['Li', 'Smith', 'Dixon']
 ```
 
-## Accumulate
+## 累积
 
-Let's start with a very simple but extremely common pattern called  accumulate. The pattern traverses a sequence of elements and accumulates a value. For example, to sum the numbers in a sequence, we use the accumulator operation with the `+` operator. As we traverse the sequence, we update a running sum that's initialized to 0:
+让我们从一个非常简单但非常常见的模式开始，称为累积。该模式遍历一系列元素并累积一个值。例如，为了对序列中的数字求和，我们使用带有`+`运算符的累加器运算。当我们遍历序列时，我们更新一个初始化为 0 的流动总和：
 
 <img src="img/accumulator.png" width="290">
 
-In Excel, this is like using `sum(...)` in a cell. In Python, the implementation of this pattern has an initialization step and a loop:
-
+在 Excel 中，这就像在单元格中使用`sum(...)`。在 Python 中，这种模式的实现有一个初始化步骤和一个循环：
 
 ```python
 sum = 0
@@ -82,19 +79,17 @@ print(sum)
 # 207
 ```
 
+我们可以使用我们想要的任何其他算术运算符，例如`*`。实际上，我们可以使用任何带有两个操作数并返回新值的函数。 对于求和，函数的两个“输入”数字是先前的累计值和序列中的下一个值。该函数的结果是新的累计值。`+`和`*`是最常见的运算符。
 
-We can use any other arithmetic operator we want, such as `*`. In fact, we can use any function that takes two operands and returns a new value. For summing, the two "input" numbers of the function are the previous accumulated value and the next value in the sequence. The result of that function is the new accumulated value. `+` and `*` are the most common operators. 
+您还将在 Hadoop 和 Spark 的分布式计算世界中，看到这个名为`reduce`（归约）的操作，就像`map/reduce`那样。
 
-You will also see this operation called *reduce*, as in *map*/*reduce* in the distributed computing world of Hadoop and Spark.
+**计数器**是累加器的一种特殊情况，它计算序列中元素的数量。它还使用`+`运算符，但两个“输入”数字是先前的累计值和固定的值 1，而不是序列中的下一个元素。
 
-A **counter** is a special case of an accumulator that counts the number of elements in a sequence. It also uses the `+` operator but the two "input" numbers are the previous accumulated value and a fixed 1 value, not the next element in the sequence.
-
-We can update multiple running accumulated values, not just one. For example, let's say we wanted to count the number of even and odd values in a sequence. We need two accumulator values, both starting at zero, but the operation is the same:
+我们可以更新多个流动的累计值，而不只是一个。例如，假设我们想要计算序列中偶数和奇数值的数量。我们需要两个累加器，从零开始，但操作是相同的：
 
 <img src="img/accumulator-even-odd.png" width="320">
 
-The `+1` indicates an "add one to accumulated value" operation applied at each step but only if the current value is even or odd. In Python code, we'd do something like the following:
-
+`+1`表示每一步应用的“向累加值加 1”的操作，但仅在当前值为偶数或奇数时才应用。在 Python 代码中，我们将执行以下操作：
 
 ```python
 even = 0
@@ -108,26 +103,24 @@ print(even, odd)
 ```
 
 
-## Map
+## 映射
 
-Perhaps the most common operation *maps* one sequence to another, applying an operator or function to each element. (It's like an accumulator that accumulates a list of stuff instead of a single value.) For example, using a spreadsheet to create a new column containing the unit price discounted by 5% starts like this in a spreadsheet:
+也许最常见的操作是，将一个序列映射到另一个序列，将运算符或函数应用于每个元素。（它就像一个累加器，它累积了一个项目列表，而不是一个单独的值。）例如，使用电子表格创建一个新列，包含 5% 折扣的单价，在电子表格中如下所示：
 
 <img src="img/map-discount-op.png" width="390">
 
-We can represent both lists at time 0 using list literals:
-
+我们可以使用列表字面值，在时间 0 处表示两个列表：
 
 ```python
 UnitPrice = [38.94, 208.16, 8.69, 195.99]
 Discounted = [] # empty list
 ```
 
-In other words:
+换句话说：
 
 <img src="img/price-time0.png" width="400">
 
-The translation process in our heads from high-level operation to pseudocode to code is a game of *word association*". When your brain sees an operation that maps a column of data to another, think "map". When your brain hears "map" it should generate the appropriate pseudocode loop, filling in the pieces appropriately.  When your brain hears "for each blah blah", think "oh, for-each loop" and use the appropriate coding pattern:
-
+从高级操作到伪代码到代码，我们头脑中的翻译过程是*单词关联*游戏。当你的大脑看到将一列数据映射到另一个数据的操作时，请考虑“映射”。当你的大脑听到“映射”，它应该生成适当的伪代码循环，适当地填充片段。当你的大脑听到“对于每个等等等等”时，请考虑“哦，for-each 循环”并使用适当的编程模式：
 
 ```python
 Discounted = [] # empty list
@@ -138,15 +131,13 @@ print(Discounted)
 # [36.992999999999995, 197.75199999999998, 8.2555, 186.1905, 20.691, 6.308, 6.935, 40.62199999999999, 131.23299999999998]
 ```
 
+请注意，我已将空列表的初始化包含在此代码段中。原因是我们真的想在心理上，将初始化与此代码模式相关联。
 
-Notice that I have included the initialization of the empty list as part of this code snippet. The reason is that we really want to mentally associate the initialization with this code pattern.
+即使在微观层面，也要考虑将操作映射到代码。例如，当我想到“将`x`添加到列表`y`”时，我的大脑会将其转换为`y.append(x)`。
 
-Even at the microlevel, think about mapping operations to code. For example, when I think about "*add <ins>x</ins> to list <ins>y</ins>*", my brain translates that to `y.append(x)`.
+### 用于映射操作的列表推导式
 
-### List comprehension for map operation
-
-This is such a common pattern that Python has an explicit construct to make things easier.  It's called a *list comprehension* and it's really just shorthand that looks more like mathematical set notation:
-
+这是一种常见的模式，Python 有一个显式结构，使事情变得更容易。它被称为*列表推导式*，它实际上只是简写，看起来更像数学集符号：
 
 ```python
 Discounted = [price * 0.95 for price in UnitPrice] # a list comprehension
@@ -156,10 +147,9 @@ print(Discounted)
 ```
 
 
-### Exercise
+### 练习
 
-Without looking at the code we just did, try to write the code out for a map operation using a list comprehension that divides the prices in half, again putting the values in `Discounted`. **Don't cut/paste. Type!**
-
+在不查看我们刚才所做的代码的情况下，尝试使用列表推导来为映射操作编写代码，该列表推导将价格除以 2，再次将值放在`Discounted`中。**不要剪切/粘贴。输入它！**
 
 ```python
 Discounted = [price/2 for price in UnitPrice] # a list comprehension
@@ -169,10 +159,9 @@ print(Discounted)
 ```
 
 
-### Exercise
+### 练习
 
-Given a list of names, `['Xue', 'Mary', 'Robert']`, give code to implement a map operation that converts the names to list `namelens` containing the length of the names. Hint: Function call `len('Xue')` returns 3. **Don't cut/paste. Type!**
-
+给定一个名称列表，`['Xue', 'Mary', 'Robert']`，用代码实现一个映射操作，将名称转换为`namelens`列表，它包含名称长度。提示：函数调用`len('Xue')`返回 3。**不要剪切/粘贴。输入它！**
 
 ```python
 names = ['Xue', 'Mary', 'Robert']
@@ -183,28 +172,26 @@ print(namelens)
 ```
 
 
-## Combine
+## 组合
 
-Let's look at the code pattern to traverse two lists at once placing the result in a third list. For example, to compute the cost of a sales transaction, we multiply the quantity times the unit price. In a spreadsheet, that looks like this:
+让我们看一下代码模式，一次遍历两个列表，将结果放在第三个列表中。例如，要计算销售交易的成本，我们将数量乘以单位价格。在电子表格中，如下所示：
 
 <img src="img/map-formula.png" width="250">
 
-Dragging that formula down the Cost column, applies the formula to the following rows, thus, filling the new column.
+将该公式拖到“成本”列中，将公式应用于以下行，从而填充新列。
 
-Programmatically, what we're doing is multiplying the *ith* element from two different sequences and placing the result in the *ith* position of the output sequence:
+以编程方式，我们正在做的是将两个不同的序列的*第 i 个*元素相乘，并将结果放在输出序列的*第 i 个*位置：
 
 <img src="img/map-mult.png" width="490">
 
-At time zero, we have the following data available:
-
+一开始，我们有以下数据：
 
 ```python
 Quantity = [6, 49, 27, 30, 19, 21, 12, 22, 21]
 UnitPrice = [38.94, 208.16, 8.69, 195.99, 21.78, 6.64, 7.3, 42.76, 138.14]
 ```
 
-When traversing more than a single list, we typically need to use an indexed loop rather than a for-each loop:
-
+遍历多个列表时，我们通常需要使用索引循环而不是 for-each 循环：
 
 ```python
 Cost = []
@@ -216,10 +203,9 @@ print(Cost)
 ```
 
 
-### List comprehension for combine operation
+### 用于组合操作的列表推导式
 
-Or, better yet, use a list comprehension:
-
+或者，更好的是，使用列表推导式：
 
 ```python
 Cost = [Quantity[i] * UnitPrice[i] for i in range(len(Quantity))]
@@ -228,21 +214,13 @@ print(Cost)
 # [233.64, 10199.84, 234.63, 5879.700000000001, 413.82000000000005, 139.44, 87.6, 940.7199999999999, 2900.9399999999996]
 ```
 
-
-Tricks for formatting:
-
+格式化技巧：
 
 ```python
 f"{3.14159:.2f}"
 
 # '3.14'
 ```
-
-
-
-
-
-
 
 
 ```python
@@ -262,26 +240,13 @@ f"{3.14159:.2f}"
 ```
 
 
-
-
-
-
-
-
 ```python
 [round(c,2) for c in Cost]
 
 # [233.64, 10199.84, 234.63, 5879.7, 413.82, 139.44, 87.6, 940.72, 2900.94]
 ```
 
-
-
-
-
-
-
-Note that you might be tempted to use a double `for`-each loop in a list comprehension, but you get the cross product of each value in quantity times each value in your price. That's not what we want, as you can see here:
-
+请注意，您可能想在列表推导中使用两个`for`循环，但是您可能获得数量的每个值和价格的每个值的叉乘。这不是我们想要的，正如你在这里看到的：
 
 ```python
 print( [q*p for q in Quantity for p in UnitPrice] ) # WRONG!
@@ -291,23 +256,20 @@ print( [q*p for q in Quantity for p in UnitPrice] ) # WRONG!
 '''
 ```
 
-### The zip function
+### `zip`函数
 
-We can also use `zip`, a very useful function that pulls one value from each list to make a tuple at each iteration:
-
+我们也可以使用`zip`，这是一个非常有用的函数，它从每个列表中提取一个值，以便在每次迭代时生成一个元组：
 
 ```python
 Cost = []
 for q,u in zip(Quantity,UnitPrice):
     Cost.append( q * u )
 print(Cost)
+
+# [233.64, 10199.84, 234.63, 5879.700000000001, 413.82000000000005, 139.44, 87.6, 940.7199999999999, 2900.9399999999996]
 ```
 
-    [233.64, 10199.84, 234.63, 5879.700000000001, 413.82000000000005, 139.44, 87.6, 940.7199999999999, 2900.9399999999996]
-    
-
-Or, with a list comprehension:
-
+或者，使用列表推导式：
 
 ```python
 Cost = [q * u for q,u in zip(Quantity,UnitPrice)]
@@ -317,20 +279,19 @@ print(Cost)
 ```
 
 
-## Split
+## 分割
 
-The opposite of combining is splitting where we split a stream into two or more new streams. For example, I often have to split the full names in a list into their first and last names. In a spreadsheet, we make a blank column:
+组合的反面是分割，我们将流拆分为两个或更多个新的流。 例如，我经常需要将列表中的全名拆分为它们的名字和姓氏。 在电子表格中，我们创建一个空白列：
 
 <img src="img/split-names.png" width="250">
 
-and then split on the space character (In Excel, you use `Data` > `Text to Columns`) to get two new columns:
+然后按空格字符拆分（在 Excel 中，使用`Data > Text to Columns`）获得两个新列：
 
 <img src="img/split-names-after.png" width="160">
 
-We could "undo" this split using a *combine* operation with the string concatenation operator, which would combine first and last names together into a new stream containing full names again.
+我们可以使用*组合*操作与字符串连接运算符“撤消”此拆分，该操作符将名字和姓氏组合成一个包含全名的新流。
 
-Another common use of splitting is to take a string representing a string of numbers and split it into a list with those numbers:
-
+拆分的另一个常见用途是接受表示一串数字的字符串，并将其拆分为包含这些数字的列表：
 
 ```python
 '1 2 3'.split(' ')
@@ -338,24 +299,11 @@ Another common use of splitting is to take a string representing a string of num
 # ['1', '2', '3']
 ```
 
-
-
-
-
-
-
-
 ```python
 '1 2    3'.split(' ')
+
+# ['1', '2', '', '', '', '3']
 ```
-
-
-
-
-    ['1', '2', '', '', '', '3']
-
-
-
 
 ```python
 values = '1 2 3'.split(' ')
@@ -364,14 +312,7 @@ values = '1 2 3'.split(' ')
 # [1, 2, 3]
 ```
 
-
-
-
-
-
-
-We can even traverse a list to get a matrix (list of lists)
-
+我们甚至可以遍历列表来获得矩阵（列表的列表）
 
 ```python
 rows = [
@@ -384,31 +325,18 @@ matrix
 # [[1, 2, 3], [3, 4, 5]]
 ```
 
-
-
-
-
-
-
-
 ```python
 from lolviz import *
 objviz(matrix)
 ```
 
-
-
-
 ![svg](img/2.4_python-patterns_42_0.svg)
 
+## 切片
 
+到目前为止，我们检查过的大多数操作，都会产生与输入序列大小相同的列表或序列，但是有许多操作会产生数据的子集。第一个这样的操作是`slice`，它提取列表的子集。（同样，在这里我明确使用术语“列表”，来指示切片通常作用在适合内存的数据结构上。）
 
-## Slice
-
-Most of the operations we've examined so far yield lists or sequences that have the same size as the input sequence, but there are many operations that yield subsets of the data. The first such operation is slice, which extracts a subset of a list. (Again, here I explicitly use the term list to indicate that slicing generally occurs on a data structure that fits in memory.)
-
-The slice operation is a function of two values, a start and end position within a list.
-
+切片操作是两个值的函数，列表中的开始和结束位置。
 
 ```python
 names=['Xue', 'Mary', 'Bob']
@@ -427,20 +355,19 @@ Length 3
 '''
 ```
 
-**Warning**: Most languages and libraries assume the ending slice position is exclusive, which would mean slicing from the position 0 to position 3, in this case. To make matters more complicated, Python but not R, starts counting at 0 not 1. It's hard to switch back and forth between Python and R in this respect, so it's good to highlight here so you keep it in mind.
+**警告**：大多数语言和库假设结束切片位置是排除的，这意味着在这种情况下切片从位置 0 到位置 3。 为了使事情变得更复杂，Python 而不是 R，从 0 开始计数而不是 1。在这方面很难在 Python 和 R 之间来回切换，因此最好在这里强调一下，以便记住它。
 
-## Filter
+## 过滤
 
-The most general operation used to extract data from a list or  sequence is called *filter*. For example, using Excel's filter mechanism, we can filter a Shipping column for those values less than $10:
+用于从列表或序列中提取数据的最常用操作称为*过滤*。 例如，使用 Excel 的过滤机制，我们可以对`Shipping`列过滤少于 10 美元的值：
 
 <img src="img/filter-shipping.png" width="170">
 
-The filter operation is similar to the map operation in that a computation is applied to each element of the input stream. Map applies a function to each element of a sequence and creates a new sequence of the same size. Filter tests each element for a specific condition and, if true, adds that element to the new sequence.
+过滤操作类似于映射操作，因为计算应用于输入流的每个元素。映射将一个函数应用于序列的每个元素，并创建一个相同大小的新序列。过滤用特定条件测试每个元素，如果为真，则将该元素添加到新序列。
 
 <img src="img/filter-apply.png" width="590">
 
-A filter operation is just a map that conditionally adds elements to the target list:
-
+过滤操作只是一个映射，有条件地将元素添加到目标列表：
 
 ```python
 Shipping = [35, 68.02, 2.99, 3.99, 5.94, 4.95, 7.72, 6.22]
@@ -454,10 +381,9 @@ print(Shipping2)
 ```
 
 
-### List comprehension for filter operation
+### 用于过滤操作的列表推导式
 
-But, we should use instead a variation on the list comprehension seen in the pattern we have for the map operation:
-
+但是，我们应该使用推导式理解的变体，我们在映射操作模式中看到它：
 
 ```python
 Shipping2 = [x for x in Shipping if x < 10]
@@ -466,11 +392,9 @@ print(Shipping2)
 # [2.99, 3.99, 5.94, 4.95, 7.72, 6.22]
 ```
 
-
-We can also filter on one column but keep the data within each row together. Here is an example, using Excel, that filters Oscar winners from the list of nominees (the condition is *winner equals 1*):
+我们也可以过滤一列，但将每行中的数据保持在一起。这是一个使用 Excel 的例子，它从被提名者列表中过滤奥斯卡获奖者（条件是*`winner`等于 1*）：
 
 <img src="img/filter-winners.png" width="590">
-
 
 ```python
 Oscars = [
@@ -488,16 +412,9 @@ Oscars = [
 objviz(Oscars)
 ```
 
-
-
-
 ![svg](img/2.4_python-patterns_52_0.svg)
 
-
-
-The code for the looping construct looks like (jumping straight to the list comprehension form):
-
-
+循环结构的代码看起来像（直接跳到列表推导式形式）：
 
 ```python
 Oscars2 = [movie for movie in Oscars if movie[2]==1]
@@ -507,22 +424,15 @@ objviz(Oscars2)
 # [[1984, 'Amadeus', 1], [1985, 'Out of Africa', 1]]
 ```
 
-
-
-
-
 ![svg](img/2.4_python-patterns_54_1.svg)
 
+输出是列表的列表，每个电影为一行的过滤表。
 
+注意我们如何测试`movie [2]`行中的一个列值，但是将整行添加到新表中。 如果我们只是将`winner`列值添加到新列表中，我们最终会得到一个列表：`1, 1, 1, ..., 1`。
 
-The output is a list of lists, a filtered table of rows one per movie.
+### 练习
 
-Notice how we test one column value from the row, `movie[2]`, but add the entire row to the new table. If we just added the "winner" column value to the new list, we would end up with a list of ones: 1, 1, 1, ..., 1.
-
-### Exercise
-
-Filter the `Oscars` list into `Oscars2` for all movies with 3-word titles. To break a string into a list of words, use `title.split(' ')`. If the length, `len()`, of that list is 3, then copy the entire row to `Oscars2`.
-
+将`Oscars`列表中，所有具有 3 个单词的标题的电影，过滤为`Oscars2`。 要将字符串分成单词列表，请使用`title.split('')`。如果该列表的长度“len()”为3，则将整行复制到`Oscars2`。
 
 ```python
 Oscars2 = [movie for movie in Oscars if len(movie[1].split(' '))==3]
@@ -531,11 +441,9 @@ print(Oscars2)
 # [[1984, "A Soldier's Story", 0], [1984, 'The Killing Fields', 0], [1985, 'The Color Purple', 0], [1985, 'Out of Africa', 1]]
 ```
 
+### 练习
 
-### Exercise
-
-Rather than just referencing an iterate value, `x`, we can also use expressions in list comprehensions. Use the filtering variation of a list comprehension to double the shipping cost in `Shipping` if less than 10 dollars. Put the result in list `Shipping2`.
-
+我们还可以在列表推导中使用表达式，而不仅仅是引用迭代值`x`。如果少于 10 美元，请使用列表推导的过滤变体，将`Shipping`中的运费加倍。将结果放在列表`Shipping2`中。
 
 ```python
 Shipping2 = [x*2 for x in Shipping if x < 10]
@@ -545,10 +453,9 @@ print(Shipping2)
 ```
 
 
-### Exercise
+### 练习
 
-Given a list of `names=['Xue', 'Mary', 'Bob']`, filter the list into `names2` for those names starting with `X`. Recall that `name[i]` yields the ith character in `name`. Or use `name.startswith(...)`.
-
+给出列表`names=['Xue', 'Mary', 'Bob']`，对于那些以`X`开头的名字，将列表过滤为`names2`。 回想一下`name [i]`在`name`中产生第`i`个字符。或者使用`name.startswith(...)`。
 
 ```python
 names=['Xue', 'Mary', 'Bob']
@@ -559,12 +466,11 @@ print(names2)
 ```
 
 
-## Search
+## 搜索
 
-The filter operation finds all elements in a sequence that satisfy a specific condition, but often we'd like to know which element satisfies the condition first (or last). (Or, we often just need to know if a particular element is present.) This brings us to the *search* operation. At its most general, search returns the first (or last) position in the sequence rather than the value at that position. If we have the position, often called the *index*, we can always ask the sequence for the value at that position. If the element is not found, the search returns invalid index -1. 
+过滤操作查找序列中满足特定条件的所有元素，但通常我们想知道哪个元素首先（或最后）满足条件。（或者，我们通常只需要知道是否存在特定元素。）这将我们带到*搜索*操作。最常见的是，搜索返回序列中的第一个（或最后一个）位置，而不是该位置的值。如果我们有位置，通常称为*索引*，我们总是可以请求序列中该位置的值。如果未找到该元素，则搜索返回无效索引`-1`。
 
-Searching is, in some sense, a variation on filtering. The difference is what we do when we find an element for which the condition is true. Instead of adding that element to the target list, a search bails out of the loop.
-
+在某种意义上，搜索是过滤的变体。不同之处在于，我们在找到条件为真的元素时所做的事情。搜索不再将该元素添加到目标列表中，而是退出循环。
 
 ```python
 first=['Xue', 'Mary', 'Robert']     # our given input
@@ -579,15 +485,13 @@ print(index)
 # 1
 ```
 
+无论循环类型如何，`break`语句都会打破闭合的循环。
 
-The `break` statement breaks out of the immediately-enclosing loop, regardless of the type of loop.
-
-The search operation can even be used within a string (list of characters) to find the position of a character of interest. For example, to slice up a full name into first and last names, we can combine a search for the space character with two slice operations. Given full name `Xue Li`, a search for the space character returns the fourth position or index 3. To extract the first name, we slice from index 0 to index 3, exclusively on the right. To get the last name, we slice from index 4 to 6, exclusively on the right. 
+搜索操作甚至可以在字符串（字符列表）中使用，来找到感兴趣字符的位置。 例如，要将全名切割为名字和姓氏，我们可以将搜索空格字符与两个切片操作组合在一起。 给定全名`Xue Li`，搜索空格字符将返回第四个位置或索引 3。要提取第一个名称，我们将从索引 0 切片到索引 3，仅排除右侧。 为了获得姓氏，我们从索引 4 切换到 6，仅排除右侧。
 
 <img src="img/split-string.png" width="190">
 
-Here's what that looks like a python:
-
+这就是  python 的样子：
 
 ```python
 name = 'Xue Li'
@@ -611,21 +515,19 @@ Last: Li
 '''
 ```
 
+为了确定字符串结尾的索引，程序员倾向于使用字符串的长度。长度可以是一个索引，其值是字符串末尾的后一个值，这是使用排除性右索引时，我们想要用于切片的。
 
-To determine the index of the end of the string, programmers tend to use the length of the string. The length works out to be an index whose value is one past the end of the string, which is what we want for a slice using an exclusive right index.
+## 嵌套循环
 
-## Nested loops
+我们有时需要重复重复的指令，我们称之为*嵌套循环*。在分析领域，嵌套循环非常重要，因为我们使用嵌套循环来处理矩阵，图像和数据表。
 
-We sometimes need to repeat repeated instructions, which we call a *nested loop*. In the analytics world, nested loops are hugely important because we use them to process matrices, images, and tables of data.
+### 处理矩阵
 
-### Processing matrices
-
-Recall that, while we humans can look at the entire matrix at once, a computer examines each element one-by-one. Take a look at this 3x3 matrix:
+回想一下，虽然我们人类可以同时查看整个矩阵，但计算机会逐个检查每个元素。 看看这个 3x3 矩阵：
 
 <img src="img/matrixA.png" width="100">
 
-which we can represent in python using a list of list:
-
+我们可以使用列表的列表在 python 中表示：
 
 ```python
 A = [
@@ -635,14 +537,15 @@ A = [
 ]
 ```
 
-Because this is not a one-dimensional data structure, we can't use a simple "for each element in the matrix" loop to examine each element. The most common pattern for iterating through all elements of an *nrows* x *ncols* matrix looks like this:
+因为这不是一维数据结构，所以我们不能使用简单的“对于矩阵中的每个元素”循环来检查每个元素。 迭代`nrows x ncols`矩阵的所有元素的最常见模式如下所示：
 
-*for i in 0..nrows-1:*<br>
-&nbsp;&nbsp;&nbsp;&nbsp;*for j in 0..ncols-1:*<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*do something with matrix[i,j]*
+```py
+for i in 0..nrows-1:
+    for j in 0..ncols-1:
+        do something with matrix[i,j]
+```
 
-where *matrix[i,j]* accesses the element at row *i* and column *j*.  Such a nested loop gives all possible combinations of *i* and *j*, which is what we want when operating on a matrix. Consider the following translation of that template to Python that prints out all of the two-dimensional indices:
-
+其中`matrix[i, j]`访问行`i`和列`j`的元素。 这样的嵌套循环给出了`i`和`j`的所有可能组合，这是我们在矩阵上操作时所需要的。考虑以下该模板到 Python 的转换，打印出所有二维索引：
 
 ```python
 nrows = 3  # or len(A)
@@ -664,8 +567,7 @@ for i in range(nrows):
 '''
 ```
 
-Notice how the column *j* value varies more quickly than the row *i* value.  We can reverse this order of traversal by changing the loop order:
-
+注意列`j`值如何比行`i`值变化得更快。我们可以通过改变循环次序来反转这种遍历顺序：
 
 ```python
 for j in range(ncols):
@@ -684,12 +586,11 @@ for j in range(ncols):
 '''
 ```
 
-With the *j* loop on the outside, it will vary less quickly than the inner *i* loop.
+`j`循环在外部，它的变化速度比内部`i`循环慢。
 
-### Double-for list comprehensions to get all combinations
+### 用于获得所有组合的双重`for`列表推导
 
-Double loops inside list comprehensions give all combinations, which in this case is something we want. The following code example creates a list of string representations of the coordinates:
-
+列表推导中的双重循环给出了所有组合，在这种情况下是我们想要的。以下代码示例创建坐标的字符串表示的列表：
 
 ```python
 coords = [f"{i},{j}" for i in range(nrows) for j in range(ncols)]
@@ -699,8 +600,7 @@ print(coords)
 ```
 
 
-Now, let's use an accumulator to sum all of the elements of a 3x3 matrix, we let *nrows*=3 and *ncols*=3 and use an addition operation:
-
+现在，让我们使用累加器来求和 3x3 矩阵的所有元素，我们让`nrows = 3`和`ncols = 3`并使用加法运算：
 
 ```python
 sum = 0
@@ -713,28 +613,29 @@ print(sum)
 ```
 
 
-### Processing images
+### 处理图像
 
-In the images project for this class, we do lots of fun things to images. An image is nothing more than a two-dimensional matrix whose entries are pixel grayscale values from 0 to 255. A pixel value of 0 is black and 255 is white. For example, if we zoom in on an image, we see the individual elements (called pixels) of a two-dimensional matrix:
+在这个课程的图像项目中，我们为图像做了很多有趣的事情。 图像只不过是二维矩阵，其条目是从 0 到 255 的像素灰度值。像素值 0 是黑色而 255 是白色。 例如，如果我们放大图像，我们会看到二维矩阵的各个元素（称为像素）：
 
 <img src="img/obama-zoom.png" width="400">
 
-The only difference between an image and a matrix is that we typically access the elements of an image using x and y coordinates, rather than row and column. The template for a nested loop that accesses each element of an image looks like this:
+图像和矩阵之间的唯一区别是，我们通常使用`x`和`y`坐标而不是行和列来访问图像的元素。访问图像的每个元素的嵌套循环的模板如下所示：
 
-*for x in 0..width-1:*<br>
-&nbsp;&nbsp;&nbsp;&nbsp;*for y in 0..height-1:*<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*process pixel[x,y]*<br>
+```py
+for x in 0..width-1:
+    for y in 0..height-1:
+        process pixel[x,y]
+```
 
-Because the *y* coordinate varies faster than the *x* coordinate, the inner loop traverses one vertical stripe. The outer loop shifts *x* to the next vertical stripe to the right.
+由于`y`坐标的变化快于`x`坐标，因此内部循环遍历垂直条形。外部循环将`x`移动到右边的下一个垂直条纹。
 
-### Exercise
+### 练习
 
-As a more realistic example, let's add two matrices A and B together to form C. The key operation is to add A<sub>i,j</sub> to B<sub>i,j</sub> to get C<sub>i,j</sub>. Visually, it looks like this:
+作为一个更现实的例子，让我们将两个矩阵`A`和`B`相加为`C`。关键操作是将`A[i,j]`加上`B[i,j]`来获得`C[i,j]`。 在视觉上，它看起来像这样：
 
 <img src="img/ABC.png" width="360">
 
-
-Write out the nested Python indexed loops to add two matrices together, C = A + B. Here are some definitions to get you started:
+写出嵌套的 Python 索引循环，将两个矩阵相加，`C = A + B`。这里有一些定义可以帮助您入门：
 
 ```python
 nrows = ncols = 3
@@ -774,8 +675,6 @@ print(C)
 # [[8, 7, 10], [8, -6, 1], [3, 11, 16]]
 ```
 
-
-
 ```python
 import numpy as np
 np.array(A) + np.array(B)
@@ -787,13 +686,7 @@ array([[ 8,  7, 10],
 '''
 ```
 
-
-
-
-
-
-
-Warning: don't do this:
+警告：不要这样做：
 
 
 ```python
@@ -801,13 +694,7 @@ D=[[0]*ncols]*nrows
 objviz(D)
 ```
 
-
-
-
 ![svg](img/2.4_python-patterns_83_0.svg)
-
-
-
 
 ```python
 D[0][1] = 3
@@ -816,31 +703,18 @@ D
 # [[0, 3, 0], [0, 3, 0], [0, 3, 0]]
 ```
 
-
-
-
-
-
-
-
 ```python
 # compare to this:
 objviz([[0]*ncols for i in range(nrows)])
 ```
 
-
-
-
 ![svg](img/2.4_python-patterns_85_0.svg)
 
+### 练习
 
+我们也可以使用嵌套 for-each 循环，而不是使用索引循环（这非常适合于矩阵），像我们迄今为止所做的那样。 试试吧。
 
-### Exercise
-
-Instead of using indexed loops as we've done so far (which is very appropriate for matrices), we can also use nested for-each loops. Try this out.
-
-Given a list of first names, `first=['Xue', 'Mary', 'Robert']` and a list of last names, `last=['Li', 'Smith', 'Dixon']`, write a nested Python loop to print every combination of first and last name.
-
+给出一个名字列表，`first=['Xue', 'Mary', 'Robert']`和姓氏列表，`last=['Li', 'Smith', 'Dixon']`，写 一个嵌套的 Python 循环，用于打印名字和姓氏的每个组合。
 
 ```python
 first=['Xue', 'Mary', 'Robert']
@@ -862,10 +736,9 @@ Robert Dixon
 '''
 ```
 
-### Exercise
+### 练习
 
-Now repeat that exercise using a double-loop list comprehension.
-
+现在使用双重循环列表推导式重复该练习。
 
 ```python
 print([f+' '+l for f in first for l in last])
